--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,6 +84,52 @@
   font-weight: bold;
 }
 
+/* -------------------cardsss -------------------------------- */
+
+.cardsContainer{
+  
+    display: grid;
+    /* grid-template-columns: ; */
+    grid-template-columns:  repeat(4, 1fr);    
+    gap: 0.1rem; 
+    padding: 20px; 
+    justify-items: center;
+
+    /* display: flex; */
+}
+
+
+.productBtn{
+  align-self: center;
+}
+
+.slideSection{
+  display: grid;
+  /* grid-template-columns: ; */
+  grid-template-columns:  repeat(3, 1fr);    
+  /* gap: 0;  */
+  padding: 2rem; 
+  justify-items: center;
+  /* align-items: center; */
+}
+
+
+/* ------------------------------ SHOP Routing------------------------------------------- */
+
+
+.shopsect h3, .shopPara{
+  position: absolute;
+  top: 30%;
+  left: 50%;
+}
+.shopsect .shopPara{
+  position: absolute;
+  top: 35%;
+  left: 50%;
+}
+
+
+
 
 
 
