--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,6 +130,30 @@
 
 
 
+/* -------------------------- SHOW BLOW BAAR----------------------------------------------- */
+
+.showBlowBar{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.showBlowBar .firstRow{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+.showBlowBar .secondRow{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+
+
 
 
 
